# diPLSlib

./: .gitignore  AGENTS.md  README.md  changelog.md  pyproject.toml  setup.py
diPLSlib/: functions.py  models.py
diPLSlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
diPLSlib/utils/: misc.py
doc/: Makefile  conf.py  diPLSlib.rst  diPLSlib.utils.rst  index.rst  make.bat
doc/_build/doctrees/: diPLSlib.doctree  environment.pickle  index.doctree
doc/_build/html/: diPLSlib.html  diPLSlib.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/diPLSlib/: functions.html  models.html
doc/_build/html/_modules/sklearn/utils/: _metadata_requests.html
notebooks/: demo_ModelSelection.ipynb  demo_daPLS.ipynb  demo_diPLS.ipynb  demo_edPLS.ipynb  demo_gctPLS.ipynb  demo_mdiPLS.ipynb
tests/: test_doctests.py
